# n4tazac

./: pyproject.toml  setup.py
.github/workflows/: publish.yml
src/n4tazac/: __init__.py  __main__.py  n4tazac.py
